<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:text="@string/registration_title"
        />

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_register"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/editTextPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password_reg"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name_reg"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_last_name_reg"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_reg"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

</LinearLayout>