<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextLogin"
        />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
        >

        <TextView
            android:id="@+id/textViewForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="26dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>